# AtomOrg

./: CMakeLists.txt  Makefile
devlogs/: Day03.txt  Day04.txt  Day05.txt  Day06.txt  Day07.txt  Day11.txt
shaders/: SimpleQuad.shader  UIQuad.shader
src/atomorg/: atom_math.h  atom_texture_atlas.h  atomorg.cpp  atomorg.h  linux_atom.cpp  main.cpp
